--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include README
 include AUTHORS
 include COPYING
 include MANIFEST.in
+include Makefile
 recursive-include conf *
 recursive-include experimental *
 recursive-include spud *
