Various issues fixed (hopefully!)

--- a/conf/apache.conf
+++ b/conf/apache.conf
@@ -5,11 +5,11 @@
       RewriteBase /
       RewriteCond %{request_filename} !-f
       RewriteCond %{request_filename} !-d
-      RewriteRule ^(photos(/.*)?)$ /photos.fcgi/$1 [l,qsa]
+      RewriteRule ^(spud(/.*)?)$ /spud.fcgi/$1 [l,qsa]
     </IfModule>
 </Directory>
 
 Alias /media /usr/share/spud/media
 Alias /admin_media /usr/share/pyshared/django/contrib/admin/media
 
-FastCGIExternalServer /var/www/photos.fcgi -socket /var/run/photos.socket
+FastCGIExternalServer /var/www/spud.fcgi -socket /var/run/spud/photos.socket
