--- a/debian/control
+++ b/debian/control
@@ -7,10 +7,8 @@ Standards-Version: 3.8.4.0
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects, libjs-jquery, python-tz
+Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects, django-tables, libjs-jquery, python-tz, python-pyexiv2
+Recommends: libapache2-mod-wsgi
 Description: A Sortable Photo album Using a Django based database.
- Features 
- .
-  Feature 1
-  Feature 2
-  Feature 3
+ Implements tracking photos by exif information, location, categories, and
+ people.
