More config changes.

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -1,5 +1,5 @@
-Alias /media /usr/share/spud/media
-Alias /admin_media /usr/share/pyshared/django/contrib/admin/media
+Alias /spud/media /usr/share/spud/media
+Alias /spud/admin_media /usr/share/pyshared/django/contrib/admin/media
 
 WSGIScriptAlias         /spud /usr/share/spud/spud.wsgi
 WSGIDaemonProcess       spud threads=25
