Follow symlinks under media directory.

--- a/conf/apache2.conf
+++ b/conf/apache2.conf
@@ -5,3 +5,7 @@ WSGIScriptAlias         /spud /usr/share/spud/spud.wsgi
 WSGIDaemonProcess       spud threads=25
 WSGIProcessGroup        spud
 WSGIScriptReloading     Off
+
+<Directory /usr/share/spud/media>
+Options FollowSymLinks
+</Directory>
