--- a/debian/control
+++ b/debian/control
@@ -7,8 +7,9 @@ Standards-Version: 3.8.4.0
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects, django-tables, libjs-jquery, python-tz, python-pyexiv2
+Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects, django-tables, libjs-jquery, python-tz, python-pyexiv2, python-pyparsing, python-imaging
 Recommends: libapache2-mod-wsgi
+Suggests: python-mysqldb
 Description: A Sortable Photo album Using a Django based database.
  Implements tracking photos by exif information, location, categories, and
  people.
