Support django ajax selects version 1.2.3

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Standards-Version: 3.9.2
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects, django-tables, libjs-jquery, python-tz, python-pyexiv2, python-pyparsing, python-imaging, django-webs
+Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.2.1), python-django-south (>= 0.7), django-ajax-selects (>= 1.2.3), django-tables, libjs-jquery, libjs-jquery-ui, python-tz, python-pyexiv2, python-pyparsing, python-imaging, django-webs
 Recommends: libapache2-mod-wsgi
 Suggests: python-mysqldb
 Description: A Sortable Photo album Using a Django based database.
