--- a/debian/rules
+++ b/debian/rules
@@ -17,5 +17,5 @@ install/spud::
 	ln -s /usr/share/javascript/jquery-ui/jquery-ui.js debian/spud/usr/share/spud/media/js/jquery-ui.js
 	rm debian/spud/usr/share/spud/media/css/jquery-ui.css
 	ln -s /usr/share/javascript/jquery-ui/css/smoothness/jquery-ui.css debian/spud/usr/share/spud/media/css/jquery-ui.css
-	rm debian/spud/usr/share/spud/media/css/images
+	rm -r debian/spud/usr/share/spud/media/css/images
 	ln -s /usr/share/javascript/jquery-ui/css/smoothness/images debian/spud/usr/share/spud/media/css/images
