--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: spud
 Section: python
 Priority: optional
 Maintainer: Brian May <bam@debian.org>
-Build-Depends: debhelper (>=7.0.0), python (>= 2.4), python-support (>= 0.6), cdbs (>= 0.4.49)
+Build-Depends: debhelper (>=7.0.0), python (>= 2.6.6-3), cdbs (>= 0.4.90)
 Standards-Version: 3.9.3
 
 Package: spud
