--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.3
 Package: spud
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.3), python-django-south (>= 0.7), django-ajax-selects (>= 1.2.3), libjs-jquery, libjs-jquery-ui, python-tz, python-imaging, python-dateutil, libimage-exiftool-perl
-Recommends: libapache2-mod-wsgi, dcraw
+Recommends: libapache2-mod-wsgi, dcraw, python-ffvideo
 Suggests: python-mysqldb
 Description: Sortable Photo album Using a Django based database.
  Implements tracking photos by exif information, location, categories, and
