--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Package: spud
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.3), python-django-south (>= 0.7), django-ajax-selects (>= 1.2.3), libjs-jquery, libjs-jquery-ui, python-tz, python-imaging, python-dateutil, libimage-exiftool-perl, libav-tools
 Recommends: libapache2-mod-wsgi, dcraw, python-ffvideo
-Suggests: python-mysqldb
-Description: Sortable Photo album Using a Django based database.
- Implements tracking photos by exif information, location, categories, and
- people.
+Suggests: python-psycopg2 | python-mysqldb
+Description: Sortable Photo album Using a Django based database
+ A database for photos and videos. Search photos by exif information, albums,
+ location, categories, and people. Uses static files for all media contacts.
+ Postgres is recommended, although any database supported by Django should work.
