--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: spud
 Section: python
 Priority: optional
 Maintainer: Brian May <bam@debian.org>
-Build-Depends: debhelper (>=7.0.0), python (>= 2.6.6-3), cdbs (>= 0.4.90)
-Standards-Version: 3.9.3
+Build-Depends: debhelper (>=8.1.0), python (>= 2.6.6-3~), python-setuptools
+Homepage: https://github.com/brianmay/spud
+Standards-Version: 3.9.5
 
 Package: spud
 Architecture: all
