--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,20 @@ Source: spud
 Section: python
 Priority: optional
 Maintainer: Brian May <bam@debian.org>
-Build-Depends: debhelper (>=8.1.0), python (>= 2.6.6-3~), python-setuptools
+Build-Depends: debhelper (>=8.1.0), dh-python,
+ python-all (>= 2.6.6-3~), python-setuptools
 Homepage: https://github.com/brianmay/spud
 Standards-Version: 3.9.5
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-django (>= 1.3), python-django-south (>= 0.7), python-ajax-select (>= 1.2.3), libjs-jquery, libjs-jquery-ui, python-tz, python-imaging, python-dateutil, libimage-exiftool-perl, libav-tools
+Depends: ${misc:Depends}, ${python:Depends},
+ python-django (>= 1.3), python-django-south (>= 0.7),
+ python-ajax-select (>= 1.2.3), libjs-jquery, libjs-jquery-ui,
+ python-tz, python-imaging, python-dateutil, libimage-exiftool-perl,
+ libav-tools
 Recommends: libapache2-mod-wsgi, dcraw, python-ffvideo
-Suggests: python-psycopg2 | python-mysqldb
+Suggests: python-psycopg2 | python-mysqldb | python-mysql.connector
 Description: Sortable Photo album Using a Django based database
  A database for photos and videos. Search photos by exif information, albums,
  location, categories, and people. Uses static files for all media contacts.
