Updates to configuration.
Move static files to /var/lib/spud/static.

Move default image directory to /var/lib/spud/images.

--- a/conf/spud.conf
+++ b/conf/spud.conf
@@ -18,3 +18,11 @@ Alias /spud/static /var/lib/spud/static
     Require all granted
     </IfVersion>
 </Location>
+
+Alias /images /var/lib/spud/images
+<Location "/images">
+    SetHandler None
+    <IfVersion >= 2.4>
+    Require all granted
+    </IfVersion>
+</Location>
