Django pipeline support.

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Brian May <bam@debian.org>
 Build-Depends: debhelper (>=8.1.0), dh-python, libjs-jquery, libjs-jquery-ui,
  python-all (>= 2.6.6-3~), python-setuptools, python-six, python-flake8,
  python-ajax-select, python-dateutil, python-pil, python-tz, python-django,
+ python-django-pipeline, csstidy, slimit
 Homepage: https://github.com/brianmay/spud
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
