Add WSGIPassAuthorization to Apache config.

--- a/conf/spud.conf
+++ b/conf/spud.conf
@@ -10,6 +10,7 @@ WSGIScriptAlias         /spud /etc/spud/spud.wsgi
 WSGIDaemonProcess       spud threads=25
 WSGIProcessGroup        spud
 WSGIScriptReloading     Off
+WSGIPassAuthorization   On
 
 Alias /spud/static /var/lib/spud/static
 <Location "/spud/static">
