Update default URL.

--- a/conf/spud.conf
+++ b/conf/spud.conf
@@ -1,4 +1,4 @@
-WSGIScriptAlias         /spud /etc/spud/spud.wsgi
+WSGIScriptAlias         /photos /etc/spud/spud.wsgi
 <IfVersion >= 2.4>
     <Directory /etc/spud>
         <Files spud.wsgi>
@@ -12,8 +12,8 @@ WSGIProcessGroup        spud
 WSGIScriptReloading     Off
 WSGIPassAuthorization   On
 
-Alias /spud/static /var/lib/spud/static
-<Location "/spud/static">
+Alias /photos/static /var/lib/spud/static
+<Location "/photos/static">
     SetHandler None
     <IfVersion >= 2.4>
     Require all granted
