--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
  - DJANGO_VERSION=1.8
 
 install:
-  - travis_retry pip install -q Django==$DJANGO_VERSION pytest pytest-django djangorestframework
+    - travis_retry pip install -q Django==$DJANGO_VERSION pytest pytest-django djangorestframework django-pipeline
 
 script:
   - py.test
