Add django-ajax-selects to test env.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
  - DJANGO_VERSION=1.8
 
 install:
-    - travis_retry pip install -q Django==$DJANGO_VERSION pytest pytest-django djangorestframework django-pipeline
+    - travis_retry pip install -q Django==$DJANGO_VERSION pytest pytest-django djangorestframework django-pipeline django-ajax-selects
 
 script:
   - py.test
