Add more dependancies

--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,8 @@ deps =
     mock>=0.7.2
     setuptools>=17.1
     setuptools_scm
+    Pillow
+    djangorestframework
     django-pipeline
     django-environ
     pytest
