django-cors-headers also required

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ deps =
     djangorestframework
     django-pipeline
     django-environ
+    django-cors-headers
     pytest
     pytest-django
     pytest-cov
