--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ env:
  - DJANGO_VERSION=master DATABASE_URL=sqlite://
 
 install:
-  - travis_retry pip install -q mock==1.0.1 pytest pytest-django pytest-cov python-dateutil Pillow djangorestframework django-pipeline django-environ django-cors-headers setuptools_scm
+  - travis_retry pip install -q mock==1.0.1 pytest pytest-django pytest-cov pytz python-dateutil Pillow djangorestframework django-pipeline django-environ django-cors-headers setuptools_scm
 # Install django master or version
   - bash -c "if [[ \"$DJANGO_VERSION\" == 'master' ]]; then pip install 'https://github.com/django/django/archive/master.tar.gz'; else pip install Django==$DJANGO_VERSION; fi; "
 # Install database drivers
