--- a/tox.ini
+++ b/tox.ini
@@ -27,6 +27,7 @@ deps =
     mock>=0.7.2
     setuptools>=17.1
     setuptools_scm
+    pytz
     python-dateutil
     Pillow
     djangorestframework
