--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,15 @@ python:
  - 3.5
 
 env:
- - DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/django_guardian
- - DJANGO_VERSION=1.8.11 DATABASE_URL=postgres://postgres@/django_guardian
- - DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/django_guardian
- - DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/django_guardian
+ - DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/spud
+ - DJANGO_VERSION=1.8.11 DATABASE_URL=postgres://postgres@/spud
+ - DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/spud
+ - DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
 
- - DJANGO_VERSION=1.7.10 DATABASE_URL=mysql://root:@localhost/django_guardian
- - DJANGO_VERSION=1.8.11 DATABASE_URL=mysql://root:@localhost/django_guardian
- - DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/django_guardian
- - DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/django_guardian
+ - DJANGO_VERSION=1.7.10 DATABASE_URL=mysql://root:@localhost/spud
+ - DJANGO_VERSION=1.8.11 DATABASE_URL=mysql://root:@localhost/spud
+ - DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/spud
+ - DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
 
  - DJANGO_VERSION=1.7.10 DATABASE_URL=sqlite://
  - DJANGO_VERSION=1.8.11 DATABASE_URL=sqlite://
@@ -32,10 +32,7 @@ install:
 
 script:
   - python ./setup.py --version
-  - py.test --cov=guardian
-
-notifications:
-  irc: "irc.freenode.net#django-guardian"
+  - py.test --cov=spud
 
 
 matrix:
@@ -43,37 +40,37 @@ matrix:
   exclude:
       # Drop python 3.3 and django 1.9
       - python: 3.3
-        env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/spud
       - python: 3.3
-        env: DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/django_guardian
+        env: DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/spud
       - python: 3.3
         env: DJANGO_VERSION=1.9.4 DATABASE_URL=sqlite://
       # Drop python 3.3 and django master
       - python: 3.3
-        env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
       - python: 3.3
-        env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/django_guardian
+        env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
       - python: 3.3
         env: DJANGO_VERSION=master DATABASE_URL=sqlite://
       # Drop python 3.5 and django 1.7
       - python: 3.5
-        env: DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/spud
       - python: 3.5
-        env: DJANGO_VERSION=1.7.10 DATABASE_URL=mysql://root:@localhost/django_guardian
+        env: DJANGO_VERSION=1.7.10 DATABASE_URL=mysql://root:@localhost/spud
       - python: 3.5
         env: DJANGO_VERSION=1.7.10 DATABASE_URL=sqlite://
       # Drop python 3.3 with postgres due lack of driver
       - python: 3.3
-        env: DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=1.7.10 DATABASE_URL=postgres://postgres@/spud
       - python: 3.3
-        env: DJANGO_VERSION=1.8.11 DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=1.8.11 DATABASE_URL=postgres://postgres@/spud
       - python: 3.3
-        env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/django_guardian
+        env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/spud
   allow_failures:
-      - env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/django_guardian
-      - env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/django_guardian
+      - env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
+      - env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
       - env: DJANGO_VERSION=master DATABASE_URL=sqlite://
       # Support for 1.9.4 is broken, see https://code.djangoproject.com/ticket/26384
-      - env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/django_guardian
-      - env: DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/django_guardian
+      - env: DJANGO_VERSION=1.9.4 DATABASE_URL=postgres://postgres@/spud
+      - env: DJANGO_VERSION=1.9.4 DATABASE_URL=mysql://root:@localhost/spud
       - env: DJANGO_VERSION=1.9.4 DATABASE_URL=sqlite://
