--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,5 @@ deps =
     django17: django==1.7.10
     django18: django==1.8.11
     django19: django==1.9.4
+    psycopg2==2.6.1
+    mysqlclient==1.3.7
