Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,5 @@
 	push = +force group user/Brian May (brianmay)
 	pushTag = group user/Brian May (brianmay)
 	pushSignedTag = group user/Brian May (brianmay)
+[submit]
+	action = rebase if necessary
