--- a/tox.ini
+++ b/tox.ini
@@ -24,19 +24,7 @@ commands =
     # tsc spud/static/js/*.ts
     py.test --cov=spud
 deps =
-    mock>=0.7.2
-    setuptools>=17.1
-    setuptools_scm
-    pytz
-    python-dateutil
-    Pillow
-    djangorestframework
-    django-pipeline
-    django-environ
-    django-cors-headers
-    pytest
-    pytest-django
-    pytest-cov
+    -rrequirements-tests.txt
     django17: django==1.7.10
     django18: django==1.8.11
     django19: django==1.9.4
