--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,9 @@ envlist =
     py35-django18,
     py34-django19,
     py35-django19,
+    py27-django110,
+    py34-django110,
+    py35-django110,
 
 [testenv]
 passenv = DATABASE_URL
@@ -22,5 +25,6 @@ deps =
     -rrequirements-tests.txt
     django18: django==1.8.11
     django19: django==1.9.12
+    django110: django==1.10.5
     psycopg2==2.6.1
     mysqlclient==1.3.7
