--- a/conf/spud.conf
+++ b/conf/spud.conf
@@ -1,7 +1,7 @@
-WSGIScriptAlias         /photos /etc/spud/spud.wsgi
+WSGIScriptAlias         /photos /etc/spud/wsgi.py
 <IfVersion >= 2.4>
     <Directory /etc/spud>
-        <Files spud.wsgi>
+        <Files wsgi.py>
             Require all granted
         </Files>
     </Directory>
