--- a/debian/control
+++ b/debian/control
@@ -3,12 +3,12 @@ Section: python
 Priority: optional
 Maintainer: Brian May <bam@debian.org>
 Build-Depends: debhelper (>=9), dh-python, libjs-jquery, libjs-jquery-ui,
- python-all (>= 2.6.6-3~), python-setuptools, python-six, python-flake8, python-django-cors-headers,
- python-dateutil, python-pil, python-tz, python-django, python3-django-cors-headers,
- python-django-pipeline, python-djangorestframework (>= 3.0.5), node-typescript,
- python-setuptools-scm, python-pytest, python-pytest-django, python-mock,
- python-django-environ, python-pytest-runner,
- cssmin, slimit,
+ python3-all (>= 2.6.6-3~), python3-setuptools, python3-six, python3-flake8, python3-django-cors-headers,
+ python3-dateutil, python3-pil, python3-tz, python3-django, python3-django-cors-headers,
+ python3-django-pipeline, python3-djangorestframework (>= 3.0.5), node-typescript,
+ python3-setuptools-scm, python3-pytest, python3-pytest-django, python3-mock,
+ python3-django-environ, python3-pytest-runner,
+ cssmin, python3-slimit,
 Homepage: https://github.com/brianmay/spud
 Vcs-Git: git://github.com/brianmay/spud-debian
 Vcs-Browser: https://github.com/brianmay/spud-debian
@@ -17,13 +17,13 @@ X-Python-Version: >= 2.7
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends},
- libapache2-mod-wsgi | httpd-wsgi,
+Depends: ${misc:Depends}, ${python3:Depends},
+ libapache2-mod-wsgi-py3 | httpd-wsgi3,
  apache2 | httpd,
  libimage-exiftool-perl, libav-tools, exiftran,
  libjs-jquery,
 Recommends: dcraw
-Suggests: python-psycopg2 | python-mysqldb | python-mysql.connector
+Suggests: python3-psycopg2 | python3-mysqldb | python3-mysql.connector
 Description: Sortable Photo album Using a Django based database
  A database for photos and videos. Search photos by exif information, albums,
  place, categories, and people. Uses static files for all media contacts.
