--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,19 @@ env:
  - DJANGO_VERSION=1.8.17 DATABASE_URL=postgres://postgres@/spud
  - DJANGO_VERSION=1.9.12 DATABASE_URL=postgres://postgres@/spud
  - DJANGO_VERSION=1.10.5 DATABASE_URL=postgres://postgres@/spud
+ - DJANGO_VERSION=1.11.0 DATABASE_URL=postgres://postgres@/spud
  - DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
 
  - DJANGO_VERSION=1.8.17 DATABASE_URL=mysql://root:@localhost/spud
  - DJANGO_VERSION=1.9.12 DATABASE_URL=mysql://root:@localhost/spud
  - DJANGO_VERSION=1.10.5 DATABASE_URL=mysql://root:@localhost/spud
+ - DJANGO_VERSION=1.11.0 DATABASE_URL=mysql://root:@localhost/spud
  - DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
 
  - DJANGO_VERSION=1.8.17 DATABASE_URL=sqlite://
  - DJANGO_VERSION=1.9.12 DATABASE_URL=sqlite://
  - DJANGO_VERSION=1.10.5 DATABASE_URL=sqlite://
+ - DJANGO_VERSION=1.11.0 DATABASE_URL=sqlite://
  - DJANGO_VERSION=master DATABASE_URL=sqlite://
 
 install:
@@ -37,6 +40,28 @@ script:
 
 matrix:
   fast_finish: true
+  exclude:
+      # Drop python 3.6 and django 1.8
+      - python: 3.6
+        env: DJANGO_VERSION=1.8.17 DATABASE_URL=postgres://postgres@/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.8.17 DATABASE_URL=mysql://root:@localhost/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.8.17 DATABASE_URL=sqlite://
+      # Drop python 3.6 and django 1.9
+      - python: 3.6
+        env: DJANGO_VERSION=1.9.12 DATABASE_URL=postgres://postgres@/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.9.12 DATABASE_URL=mysql://root:@localhost/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.9.12 DATABASE_URL=sqlite://
+      # Drop python 3.3 with django 1.10
+      - python: 3.6
+        env: DJANGO_VERSION=1.10.5 DATABASE_URL=postgres://postgres@/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.10.5 DATABASE_URL=mysql://root:@localhost/spud
+      - python: 3.6
+        env: DJANGO_VERSION=1.10.5 DATABASE_URL=sqlite://
   allow_failures:
       - env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
       - env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
