--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,10 @@ envlist =
     py27-django110,
     py34-django110,
     py35-django110,
+    py27-django111,
+    py34-django111,
+    py35-django111,
+    py36-django111,
 
 [testenv]
 passenv = DATABASE_URL
@@ -26,5 +30,6 @@ deps =
     django18: django==1.8.11
     django19: django==1.9.12
     django110: django==1.10.5
+    django111: django==1.11.0
     psycopg2==2.6.1
     mysqlclient==1.3.7
