--- a/.travis.yml
+++ b/.travis.yml
@@ -56,13 +56,27 @@ matrix:
         env: DJANGO_VERSION=1.9.12 DATABASE_URL=mysql://root:@localhost/spud
       - python: 3.6
         env: DJANGO_VERSION=1.9.12 DATABASE_URL=sqlite://
-      # Drop python 3.3 with django 1.10
+      # Drop python 3.6 with django 1.10
       - python: 3.6
         env: DJANGO_VERSION=1.10.5 DATABASE_URL=postgres://postgres@/spud
       - python: 3.6
         env: DJANGO_VERSION=1.10.5 DATABASE_URL=mysql://root:@localhost/spud
       - python: 3.6
         env: DJANGO_VERSION=1.10.5 DATABASE_URL=sqlite://
+      # Drop python 2.7 with django master
+      - python: 2.7
+        env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
+      - python: 2.7
+        env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
+      - python: 2.7
+        env: DJANGO_VERSION=master DATABASE_URL=sqlite://
+      # Drop python 3.4 with django master
+      - python: 3.4
+        env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
+      - python: 3.4
+        env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
+      - python: 3.4
+        env: DJANGO_VERSION=master DATABASE_URL=sqlite://
   allow_failures:
       - env: DJANGO_VERSION=master DATABASE_URL=postgres://postgres@/spud
       - env: DJANGO_VERSION=master DATABASE_URL=mysql://root:@localhost/spud
