--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,16 @@
+[bumpversion]
+current_version = 2.0.8
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
+search = version='{current_version}'
+replace = version='{new_version}'
+
+[bumpversion:file:robotica/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
+
 [aliases]
 test=pytest
 
