--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.0.8
+current_version = 2.0.9
 commit = True
 tag = True
 
@@ -12,8 +12,9 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [aliases]
-test=pytest
+test = pytest
 
 [upload]
-sign=true
-identity=0x1784577F811F6EAC
+sign = true
+identity = 0x1784577F811F6EAC
+
