--- a/debian/control
+++ b/debian/control
@@ -2,28 +2,22 @@ Source: spud
 Section: python
 Priority: optional
 Maintainer: Brian May <bam@debian.org>
-Build-Depends: debhelper (>=9), dh-python, libjs-jquery, libjs-jquery-ui,
- python3-all (>= 2.6.6-3~), python3-setuptools, python3-six, python3-flake8, python3-django-cors-headers,
- python3-dateutil, python3-pil, python3-tz, python3-django, python3-django-cors-headers,
- python3-django-pipeline, python3-djangorestframework (>= 3.0.5), node-typescript,
- python3-setuptools-scm, python3-pytest, python3-pytest-django, python3-mock,
- python3-django-environ, python3-pytest-runner,
- python3-cssmin, python3-slimit, python3-pytest-bdd, python3-requests,
+Build-Depends: debhelper (>=9), dh-python, dh-virtualenv,
+ python3-all (>= 2.6.6-3~), node-typescript,
 Homepage: https://github.com/brianmay/spud
 Vcs-Git: git://github.com/brianmay/spud
 Vcs-Browser: https://github.com/brianmay/spud
-Standards-Version: 3.9.8
-X-Python-Version: >= 2.7
+Standards-Version: 4.0.0
 
 Package: spud
 Architecture: all
-Depends: ${misc:Depends}, ${python3:Depends},
+Pre-Depends: dpkg (>= 1.16.1), python3, ${misc:Pre-Depends}
+Depends: ${misc:Depends},
  libapache2-mod-wsgi-py3 | httpd-wsgi3,
  apache2 | httpd,
  libimage-exiftool-perl, libav-tools, exiftran,
  libjs-jquery,
 Recommends: dcraw
-Suggests: python3-psycopg2 | python3-mysqldb | python3-mysql.connector
 Description: Sortable Photo album Using a Django based database
  A database for photos and videos. Search photos by exif information, albums,
  place, categories, and people. Uses static files for all media contacts.
