--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ commands =
     # tsc spud/static/js/*.ts
     py.test --cov=spud
 deps =
-    -rrequirements-tests.txt
+    -rrequirements/tests.txt
     django18: django==1.8.11
     django19: django==1.9.12
     django110: django==1.10.5
