--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ basepython =
     py35: python3.5
     py36: python3.6
 commands =
+    isort -rc --check --diff karaage
+    flake8
     # tsc spud/static/js/*.ts
     py.test --cov=spud
 deps =
