--- a/setup.cfg
+++ b/setup.cfg
@@ -18,3 +18,14 @@ test = pytest
 sign = true
 identity = 0x1784577F811F6EAC
 
+[flake8]
+#ignore = W503,E741
+max-line-length = 120
+exclude = migrations,.tox
+
+[isort]
+multi_line_output=3
+include_trailing_comma=true
+use_parentheses=true
+lines_after_imports=2
+skip_glob=*/migrations/*.py
