--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ basepython =
 commands =
     isort -rc --check --diff karaage
     flake8
-    # tsc spud/static/js/*.ts
+    ./manage.py makemigrations --check --dry-run
     py.test --cov=spud
 deps =
     -rrequirements/tests.txt
