Fix calls to makemigrations

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ basepython =
 commands =
     isort -rc --check --diff karaage
     flake8
-    ./manage.py makemigrations --check --dry-run
+    ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
     py.test --cov=spud
 deps =
     -rrequirements/tests.txt
