--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
  - isort -rc --check --diff karaage
  - flake8
- - python ./manage.py makemigrations --check --dry-run
+ - python ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
  - python ./setup.py --version
  - py.test --cov=spud
 
