--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ basepython =
     py35: python3.5
     py36: python3.6
 commands =
-    isort -rc --check --diff karaage
+    isort -rc --check --diff spud
     flake8
     ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
     py.test --cov=spud
