--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ basepython =
 commands =
     isort -rc --check --diff spud
     flake8
+    ./manage.py migrate --settings=spud.tests.settings
     ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
     py.test --cov=spud
 deps =
