Update to use pipenv instead of pip

--- a/tox.ini
+++ b/tox.ini
@@ -10,10 +10,11 @@ basepython =
     py35: python3.5
     py36: python3.6
 commands =
-    isort -rc --check --diff spud
-    flake8
-    ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
-    ./manage.py migrate --settings=spud.tests.settings
-    py.test --cov=spud
+    pipenv install --dev
+    # isort currently broken from within tox.
+    # pipenv run isort -rc --check --diff spud
+    pipenv run flake8 spud
+    pipenv run ./manage.py makemigrations --settings=spud.tests.settings --check --dry-run
+    pipenv run py.test --cov=spud
 deps =
-    -rrequirements/tests.txt
+    pipenv
