--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,14 @@ downloadcache = {toxworkdir}/cache/
 envlist =
     py35,
     py36,
+    py37,
 
 [testenv]
 passenv = DATABASE_URL
 basepython =
     py35: python3.5
     py36: python3.6
+    py37: python3.7
 commands =
     pipenv install --dev
     # isort currently broken from within tox.
