Update software requirements

--- a/Pipfile
+++ b/Pipfile
@@ -4,46 +4,33 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django-environ = "==0.4.4"
-django-pipeline = "==1.6.14"
-djangorestframework = "==3.8.2"
-python-dateutil = "==2.7.3"
-pluggy = "==0.7.1"
-six = "==1.11.0"
-pytz = "==2018.5"
-cssmin = "==0.2.0"
-slimit = "==0.8.1"
-django-cors-headers = "==2.4.0"
-"psycopg2-binary" = "==2.7.5"
-whitenoise = "==4.0"
-gunicorn = "==19.8.1"
+django-environ = "*"
+django-pipeline = "*"
+djangorestframework = "*"
+python-dateutil = "*"
+pluggy = "*"
+six = "*"
+pytz = "*"
+cssmin = "*"
+slimit = "*"
+django-cors-headers = "*"
+"psycopg2-binary" = "*"
+whitenoise = "*"
+gunicorn = "*"
 Django = "==2.0.8"
-Pillow = "==5.2.0"
+Pillow = "*"
+requests = "*"
 
 [dev-packages]
-django-environ = "==0.4.4"
-django-pipeline = "==1.6.14"
-djangorestframework = "==3.8.2"
-python-dateutil = "==2.7.3"
-pluggy = "==0.7.1"
-six = "==1.11.0"
-pytz = "==2018.5"
-cssmin = "==0.2.0"
-slimit = "==0.8.1"
-django-cors-headers = "==2.4.0"
-"psycopg2-binary" = "==2.7.5"
-whitenoise = "==4.0"
-isort = "==4.3.4"
-"flake8" = "==3.5.0"
-mock = "==2.0.0"
-pytest = "==3.7.0"
-pytest-bdd = "==2.21.0"
-pytest-django = "==3.4.2"
-pytest-cov = "==2.5.1"
-pytest-runner = "==4.2"
-requests = "==2.19.1"
-Django = "==2.0.8"
-Pillow = "==5.2.0"
+pluggy = "*"
+isort = "*"
+"flake8" = "*"
+mock = "*"
+pytest = "*"
+pytest-bdd = "*"
+pytest-django = "*"
+pytest-cov = "*"
+pytest-runner = "*"
 tox = "*"
 mypy = "*"
 
