--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ django-cors-headers = "*"
 "psycopg2-binary" = "*"
 whitenoise = "*"
 gunicorn = "*"
-Django = "==2.0.8"
+Django = "*"
 Pillow = "*"
 requests = "*"
 
