--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,3 +61,33 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+  deploy-prod:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout # check out the code in the project directory
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run: |
+          docker build \
+            --file "Dockerfile" \
+            --tag "brianmay/spud:latest" \
+            --build-arg "BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" \
+            --build-arg "VCS_REF=$CIRCLE_SHA1" \
+            .
+          docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
+          docker push "brianmay/spud:latest"
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy-prod:
+          context: Docker
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
