--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           path: test-reports
           destination: test-reports
 
-  deploy-prod:
+  deploy-beta:
     docker:
       - image: circleci/python:3.7
     steps:
@@ -79,15 +79,76 @@ jobs:
           docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
           docker push "brianmay/spud:latest"
 
+  deploy-prod-pypi:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout # check out the code in the project directory
+      - run:
+          name: install dependencies
+          command: |
+            sudo pip install pipenv
+            pipenv install --dev
+      - run:
+          name: verify git tag vs. version
+          command: |
+            pipenv run setup.py verify --version "$CIRCLE_TAG"
+      - run:
+          name: init .pypirc
+          command: |
+            echo -e "[pypi]" >> ~/.pypirc
+            echo -e "username = $PYPI_USER" >> ~/.pypirc
+            echo -e "password = $PYPI_PASS" >> ~/.pypirc
+      - run:
+          name: create packages
+          command: |
+            pipenv run setup.py sdist bdist_wheel
+      - run:
+          name: upload to pypi
+          command: |
+            . venv/bin/activate
+            twine upload dist/*
+
+  deploy-prod-docker:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout # check out the code in the project directory
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: build and upload docker image |
+          command: |
+            docker build \
+              --file "Dockerfile" \
+              --tag "brianmay/spud:$CIRCLE_TAG" \
+              --build-arg "BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`" \
+              --build-arg "VCS_REF=$CIRCLE_SHA1" \
+              .
+            docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
+            docker push "brianmay/spud:$CIRCLE_TAG"
+
 workflows:
   version: 2
   build-deploy:
     jobs:
       - build
-      - deploy-prod:
+      - deploy-beta:
           context: Docker
           requires:
             - build
           filters:
             branches:
               only: master
+      - deploy-prod-pypi:
+          context: pypi
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
+      - deploy-prod-docker:
+          context: Docker
+            tags:
+              only: /[0-9]+(\.[0-9]+)*/
+            branches:
+              ignore: /.*/
