--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,11 +84,8 @@ jobs:
       - image: circleci/python:3.7
     steps:
       - checkout # check out the code in the project directory
-      - run:
-          name: install dependencies
-          command: |
-            sudo pip install pipenv
-            pipenv install --dev
+      - restore_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: verify git tag vs. version
           command: |
