--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 2.1.0
+current_version = 2.1.1
 commit = True
 tag = True
 
@@ -19,13 +19,13 @@ sign = true
 identity = 0x1784577F811F6EAC
 
 [flake8]
-#ignore = W503,E741
 max-line-length = 120
 exclude = migrations,.tox
 
 [isort]
-multi_line_output=3
-include_trailing_comma=true
-use_parentheses=true
-lines_after_imports=2
-skip_glob=*/migrations/*.py
+multi_line_output = 3
+include_trailing_comma = true
+use_parentheses = true
+lines_after_imports = 2
+skip_glob = */migrations/*.py
+
