--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,8 @@ workflows:
               only: master
       - deploy-prod-pypi:
           context: pypi
+          requires:
+            - build
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
@@ -146,6 +148,8 @@ workflows:
               ignore: /.*/
       - deploy-prod-docker:
           context: Docker
+          requires:
+            - build
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*/
