Specify PIPENV_VENV_IN_PROJECT everywhere

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
   verify-version:
     docker:
       - image: circleci/python:3.7
+        environment:
+          PIPENV_VENV_IN_PROJECT: true
     steps:
       - checkout
       - restore_cache:
@@ -90,6 +92,8 @@ jobs:
   deploy-prod-pypi:
     docker:
       - image: circleci/python:3.7
+        environment:
+          PIPENV_VENV_IN_PROJECT: true
     steps:
       - checkout
       - restore_cache:
