--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,8 @@ jobs:
       - image: circleci/python:3.7
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run: |
           docker build \
             --file "Dockerfile" \
@@ -117,6 +119,8 @@ jobs:
       - image: circleci/python:3.7
     steps:
       - checkout # check out the code in the project directory
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Build and upload docker image
           command: |
