--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ django-cors-headers = "*"
 "psycopg2-binary" = "*"
 whitenoise = "*"
 gunicorn = "*"
-Django = "*"
+Django = "~= 2.2.13"
 Pillow = "*"
 requests = "*"
 
@@ -37,4 +37,4 @@ twine = "*"
 bumpversion = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
