--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py35,
     py36,
     py37,
+    py38,
 
 [testenv]
 passenv = DATABASE_URL
@@ -11,6 +12,7 @@ basepython =
     py35: python3.5
     py36: python3.6
     py37: python3.7
+    py38: python3.8
 commands =
     pipenv install --dev
     # isort currently broken from within tox.
